@@ -2861,6 +2861,23 @@ worth the extra time.</para>
       </varlistentry>
 
       <varlistentry>
+        <term><option>--nsock-engine
+        epoll|select</option>
+        <indexterm><primary><option>--nsock-engine</option></primary></indexterm>
+        <indexterm><primary>Nsock IO engine</primary></indexterm>
+        </term>
+        <listitem>
+
+<para>Enforce use of a given nsock IO multiplexing engine. Only the
+<literal>select(2)</literal>-based fallback engine is guaranteed to be
+available on your system.  Engines are named after the name of the IO
+management facility they leverage.  Engines currenty implemented are
+<literal>epoll</literal> and <literal>select</literal>.</para>
+
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term>
           <option>-T
           paranoid|sneaky|polite|normal|aggressive|insane</option>
